Fix navbar collapse menu not visible

--- a/django_project/staticfiles/main.css
+++ b/django_project/staticfiles/main.css
@@ -93,6 +93,10 @@ body {
   margin-right: 1rem;
 }
 
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
 /* =============
    Typeography
 ============= */
@@ -338,6 +342,10 @@ img.card-img-top {
     --colorSecondary: hsl(0, 0%, 100%, 0.75);
     --colorHoverBackground: hsl(0, 0%, 100%, 0.05);
     --bannerColor: #f8f9fa;
+  }
+
+  .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
   }
   .showme {
     color: var(--colorSecondary);
